--- a/Pipfile
+++ b/Pipfile
@@ -7,9 +7,11 @@ verify_ssl = true
 
 [packages]
 tabulate = "*"
+click = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.10"
 
 [scripts]
 tests = "python -m unittest discover -p 'test_*.py'"
+cli = "python -m cli"
